[package]
name = "nativoo"
version = "0.0.0"

edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.70"
arrayvec = "0.7.2"
cfg-if = "1.0.0"
crossbeam-utils = "0.8.15"
fxhash = "0.2.1"
http = "0.2.9"
isdb = { path = "../isdb" }
log = "0.4.17"
memchr = "2.5.0"
parking_lot = "0.12.1"
tao = "0.22.0"

[target.'cfg(windows)'.dependencies]
webview2-com-sys = "0.24.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.48.0"
features = [
  "implement",
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Media_KernelStreaming",
  "Win32_Media_MediaFoundation",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Memory",
  "Win32_System_SystemServices",
  "Win32_System_Ole",
  "Win32_UI_Shell",
]

[target.'cfg(target_os = "linux")'.dependencies]
gdk = "0.16.2"
gio = "0.16.7"
glib = "0.16.9"
gtk = "0.16.2"
javascriptcore-rs = "1.0.0"
soup3 = "0.3.2"
webkit2gtk = { version = "1.1.0", features = ["v2_38"] }
