[package]
name = "tavoo"
version = "0.1.0"

edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.70"
base64 = "0.21.0"
env_logger = "0.10.0"
isdb = { path = "../isdb" }
log = "0.4.17"
mime_guess = "2.0.4"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tavoo-components = { path = "../tavoo-components" }
winit = "0.28.3"
